added styles and current weather

--- a/prepros.config
+++ b/prepros.config
@@ -909,6 +909,21 @@
         }
       }
     },
-    "files": []
+    "files": [
+      {
+        "file": "img/bg.png",
+        "config": {
+          "tasks": {
+            "png": {
+              "options": {
+                "quality": 100
+              }
+            }
+          },
+          "originalSize": 836193,
+          "optimized": true
+        }
+      }
+    ]
   }
 }
