redesign, added functional for IP determination, need to fix browser determination

--- a/prepros.config
+++ b/prepros.config
@@ -920,7 +920,21 @@
               }
             }
           },
-          "originalSize": 836193,
+          "optimized": true,
+          "originalSize": 528157
+        }
+      },
+      {
+        "file": "img/main_bg.jpg",
+        "config": {
+          "tasks": {
+            "jpg": {
+              "options": {
+                "quality": 100
+              }
+            }
+          },
+          "originalSize": 804455,
           "optimized": true
         }
       }
